# sda-coursework-1

./: Algos.c  Algos.h  BenchMark.c  BenchMark.h  CMakeLists.txt  COPYING  Generators.c  Generators.h  LinkedList.c  LinkedList.h  Menu.c  Menu.h  Table.c  Table.h  TestArray.c  TestArray.h  getch.c  getch.h  main.c  report.docx
